.provarCaches/00D410000011HE0EAM/objects/rstk__mrpdmd__c.object
<CustomObject>
    <description>mrpdmd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_amtappl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AMTAPPL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_amtunappl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>AMTUNAPPL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divmrpdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DTEREQD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_index__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>INDEX</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>item_ui</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>MRPDMDs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_lne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LNE</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_lnerel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LNEREL</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDNO</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_ordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ORDTYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipName>MRPDMDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>mrpdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>QTYOUTSTDG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>mrpdmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__mrpdmd_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MRP Demand</label>
    <nameField>
        <label>MRPDMD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRP Demands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>